# Industrial-Ledger-Backend

./: .gitignore  README.md  docker-compose.prod.yml  pyproject.toml  setup.py
config/: celery_app.py  urls.py
config/db_routers/: cqrs_router.py
config/settings/: base.py  local.py
deploy/docker/django/: Dockerfile.prod
deploy/k8/: README.md  api.yaml  celery.yaml  kustomization.yaml  postgres.yaml  redis.yaml
src/api/middleware/: idempotency.py
src/api/v1/: serializers.py  tests.py  views.py
src/domains/ledger/: apps.py  tests.py
src/domains/ledger/models/: __init__.py  journal.py
src/domains/ledger/services/: transfer.py
src/domains/webhooks/: apps.py  tasks.py
src/domains/webhooks/models/: __init__.py  outbox.py
