[tool.poetry]
name = "industrial-ledger-backend"
version = "1.0.0"
description = "High-concurrency, double-entry transactional ledger backend engine."
authors = ["Enterprise Engineering Team <dev@company.com>"]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.15"
celery = {extras = ["redis"], version = "^5.3"}
redis = "^5.0"
psycopg = {extras = ["binary"], version = "^3.1"}
django-prometheus = "^2.3"
drf-spectacular = "~0.29.0"
requests = "^2.31"
gunicorn = "^21.2"
uvicorn = {extras = ["standard"], version = "^0.27"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
